Deleted "-f" from the command in the yaml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,4 +6,4 @@ jdk: openjdk8
 install: true
 
 script:
-  - mvn -f com.examples.mymavenproject/pom.xml clean verify
+  - mvn com.examples.mymavenproject/pom.xml clean verify
